{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 81,
  "lineage": "6cabf459-8405-1f74-15de-5d9e407a127e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982081088799:internet-gateway/igw-099d983ed7a9e7e56",
            "id": "igw-099d983ed7a9e7e56",
            "owner_id": "982081088799",
            "tags": {
              "Name": "cluster-desafio-igw"
            },
            "tags_all": {
              "Name": "cluster-desafio-igw"
            },
            "vpc_id": "vpc-03f650a84bff086b3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982081088799:route-table/rtb-0952ee89a54207b9d",
            "id": "rtb-0952ee89a54207b9d",
            "owner_id": "982081088799",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099d983ed7a9e7e56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cluster-desafio-route-table"
            },
            "tags_all": {
              "Name": "cluster-desafio-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f650a84bff086b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c2826404590ea55",
            "route_table_id": "rtb-0952ee89a54207b9d",
            "subnet_id": "subnet-07f4c67ce2791f6ff"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.eks_route_table",
            "aws_subnet.eks_subnets",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cacb6800d431fffc",
            "route_table_id": "rtb-0952ee89a54207b9d",
            "subnet_id": "subnet-0244a422eac289210"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.eks_route_table",
            "aws_subnet.eks_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982081088799:security-group/sg-0f0ce50ea18d180e6",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0ce50ea18d180e6",
            "ingress": [],
            "name": "cluster-desafio-cluster-sg",
            "name_prefix": "",
            "owner_id": "982081088799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-desafio-cluster-sg"
            },
            "tags_all": {
              "Name": "cluster-desafio-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f650a84bff086b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982081088799:security-group/sg-0f5f261c0e900324f",
            "description": "Security group for EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5f261c0e900324f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "cluster-desafio-nodes-sg",
            "name_prefix": "",
            "owner_id": "982081088799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-desafio-nodes-sg"
            },
            "tags_all": {
              "Name": "cluster-desafio-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f650a84bff086b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-550536160",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f5f261c0e900324f",
            "security_group_rule_id": "sgr-0a35ab1fa7a03142f",
            "self": false,
            "source_security_group_id": "sg-0f0ce50ea18d180e6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982081088799:subnet/subnet-07f4c67ce2791f6ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f4c67ce2791f6ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982081088799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cluster-desafio-subnet-0",
              "kubernetes.io/cluster/cluster-desafio": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cluster-desafio-subnet-0",
              "kubernetes.io/cluster/cluster-desafio": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03f650a84bff086b3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982081088799:subnet/subnet-0244a422eac289210",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0244a422eac289210",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982081088799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cluster-desafio-subnet-1",
              "kubernetes.io/cluster/cluster-desafio": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cluster-desafio-subnet-1",
              "kubernetes.io/cluster/cluster-desafio": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03f650a84bff086b3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982081088799:vpc/vpc-03f650a84bff086b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be16829adae8b8ce",
            "default_route_table_id": "rtb-01ce83f4d32af0244",
            "default_security_group_id": "sg-027536e9345fee2e2",
            "dhcp_options_id": "dopt-06a9a93f5e6a4dcb7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03f650a84bff086b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ce83f4d32af0244",
            "owner_id": "982081088799",
            "tags": {
              "Name": "cluster-desafio-vpc",
              "kubernetes.io/cluster/cluster-desafio": "shared"
            },
            "tags_all": {
              "Name": "cluster-desafio-vpc",
              "kubernetes.io/cluster/cluster-desafio": "shared"
            }
          }
        }
      ]
    }
  ]
}